--- a/index.html
+++ b/index.html
@@ -24,9 +24,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-   Hello World
+
+    <!-- HEADER -->
+    <header>
+        <div class="inner">
+            <a href="/" class="logo">
+                <img src="./images/logo.png" alt="HALLEY LOGO">
+            </a>
+        </div>
+    </header>
+
 </body>
 </html>
