--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Women's Underwear & Swimwear | Brand Name</title>
+    <title>Women's Underwear & Swimwear | Halley</title>
 
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Brand Name" />
-    <meta property="og:title" content="Brand Name Home" />
-    <meta property="og:description" content="Brand Name은 여성을 위한 언더웨어와 스윔웨어를 만듭니다." />
-    <meta property="og:image" content="./images/watercolor-lingerie-hand-draw-underwear-fashion-illustration-218141669.jpeg" />
+    <meta property="og:site_name" content="Halley" />
+    <meta property="og:title" content="Halley Homepage" />
+    <meta property="og:description" content="Halley는 여성을 위한 언더웨어와 스윔웨어를 만듭니다." />
+    <meta property="og:image" content="./images/opengraph_image.jpeg" />
     <meta property="og:url" content="https://" />
 
     <meta property="twitter:card" content="summary" />
-    <meta property="twitter:site" content="Brand Name" />
-    <meta property="twitter:title" content="Brand Name Home" />
-    <meta property="twitter:description" content="Brand Name은 여성을 위한 언더웨어와 스윔웨어를 만듭니다." />
-    <meta property="twitter:image" content="./images/watercolor-lingerie-hand-draw-underwear-fashion-illustration-218141669.jpeg" />
+    <meta property="twitter:site" content="Halley" />
+    <meta property="twitter:title" content="Halley Homepage" />
+    <meta property="twitter:description" content="Halley는 여성을 위한 언더웨어와 스윔웨어를 만듭니다." />
+    <meta property="twitter:image" content="./images/opengraph_image.jpeg" />
     <meta property="twitter:url" content="https://" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
