--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <meta property="og:site_name" content="Halley" />
     <meta property="og:title" content="Halley Homepage" />
     <meta property="og:description" content="Halley는 여성을 위한 언더웨어와 스윔웨어를 만듭니다." />
-    <meta property="og:image" content="./images/opengraph_image.jpeg" />
+    <meta property="og:image" content="https://thumbs.dreamstime.com/z/different-types-bras-illustration-set-women-s-bra-bustier-icons-46169788.jpg" />
     <meta property="og:url" content="https://" />
 
     <meta property="twitter:card" content="summary" />
     <meta property="twitter:site" content="Halley" />
     <meta property="twitter:title" content="Halley Homepage" />
     <meta property="twitter:description" content="Halley는 여성을 위한 언더웨어와 스윔웨어를 만듭니다." />
-    <meta property="twitter:image" content="./images/opengraph_image.jpeg" />
+    <meta property="twitter:image" content="https://thumbs.dreamstime.com/z/different-types-bras-illustration-set-women-s-bra-bustier-icons-46169788.jpg" />
     <meta property="twitter:url" content="https://" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
