--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -31,11 +32,21 @@
 
     <!-- HEADER -->
     <header>
-        <div class="inner">
-            <a href="/" class="logo">
-                <img src="./images/logo.png" alt="HALLEY LOGO">
-            </a>
+        <div id="grid">
+            <div class="inner">
+                <a href="https://yenakhim.github.io/practice/" class="logo">
+                    <img src="./images/logo.png" alt="HALLEY LOGO">
+                </a>
+            </div>
+            <div class="submenu">
+                <a href="./newarrivals.html">New Arrivals</a>
+                <a href="./underwear.html">Underwear</a>               
+                <a href="./swimwear.html">Swimwear</a>
+                <a href="./plus.html">Plus Size</a>
+                <a href="./sale.html">Sale</a>
+            </div>
         </div>
+        
     </header>
 
 </body>
