--- a/index.html
+++ b/index.html
@@ -1,53 +1,72 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Women's Underwear & Swimwear | Halley</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Women's Underwear & Swimwear | Halley</title>
 
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Halley" />
-    <meta property="og:title" content="Halley Homepage" />
-    <meta property="og:description" content="Halley는 여성을 위한 언더웨어와 스윔웨어를 만듭니다." />
-    <meta property="og:image" content="https://thumbs.dreamstime.com/z/different-types-bras-illustration-set-women-s-bra-bustier-icons-46169788.jpg" />
-    <meta property="og:url" content="https://" />
+	<meta property="og:type" content="website" />
+	<meta property="og:site_name" content="Halley" />
+	<meta property="og:title" content="Halley Homepage" />
+	<meta property="og:description" content="Halley는 여성을 위한 언더웨어와 스윔웨어를 만듭니다." />
+	<meta property="og:image"
+		content="https://thumbs.dreamstime.com/z/different-types-bras-illustration-set-women-s-bra-bustier-icons-46169788.jpg" />
+	<meta property="og:url" content="https://" />
 
-    <meta property="twitter:card" content="summary" />
-    <meta property="twitter:site" content="Halley" />
-    <meta property="twitter:title" content="Halley Homepage" />
-    <meta property="twitter:description" content="Halley는 여성을 위한 언더웨어와 스윔웨어를 만듭니다." />
-    <meta property="twitter:image" content="https://thumbs.dreamstime.com/z/different-types-bras-illustration-set-women-s-bra-bustier-icons-46169788.jpg" />
-    <meta property="twitter:url" content="https://" />
+	<meta property="twitter:card" content="summary" />
+	<meta property="twitter:site" content="Halley" />
+	<meta property="twitter:title" content="Halley Homepage" />
+	<meta property="twitter:description" content="Halley는 여성을 위한 언더웨어와 스윔웨어를 만듭니다." />
+	<meta property="twitter:image"
+		content="https://thumbs.dreamstime.com/z/different-types-bras-illustration-set-women-s-bra-bustier-icons-46169788.jpg" />
+	<meta property="twitter:url" content="https://" />
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="./css/main.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
 
-    <!-- HEADER -->
-    <header>
-        <div id="grid">
-            <div class="inner">
-                <a href="https://yenakhim.github.io/practice/" class="logo">
-                    <img src="./images/logo.png" alt="HALLEY LOGO">
-                </a>
-            </div>
-            <div class="submenu">
-                <a href="./newarrivals.html">New Arrivals</a>
-                <a href="./underwear.html">Underwear</a>               
-                <a href="./swimwear.html">Swimwear</a>
-                <a href="./plus.html">Plus Size</a>
-                <a href="./sale.html">Sale</a>
-            </div>
-        </div>
-        
-    </header>
+	<!-- HEADER -->
+	<header>
+		<div id="grid">
+			<div class="inner">
+				<a href="https://yenakhim.github.io/practice/" class="logo">
+					<img class="logo-img" src="./images/logo.png" alt="HALLEY LOGO">
+				</a>
+			</div>
+			<div class="submenu">
+				<a href="./newarrivals.html">New Arrivals</a>
+				<a href="./underwear.html">Underwear</a>
+				<a href="./swimwear.html">Swimwear</a>
+				<a href="./plus.html">Plus Size</a>
+				<a href="./sale.html">Sale</a>
+			</div>
+		</div>
 
+	</header>
+	<div class="row">
+		<div class="col col-1">
+			<img class="gen-img" src="./images/50s-image.jpeg" alt="50s-image">
+			<a class="gen-link" href="#fifties">SHOP 50s</a>
+		</div>
+		<div class="col col-2">
+			<img class="gen-img" src="./images/60s-image.jpeg" alt="60s-image">
+			<a class="gen-link" href="#sixties">SHOP 60s</a>
+		</div>
+		<div class="col col-3">
+			<img class="gen-img" src="./images/70s-image.jpeg" alt="70s-image">
+			<a class="gen-link" href="#seventies">SHOP 70s</a>
+		</div>
+		
+	</div>
 </body>
+
 </html>
