--- a/index.html
+++ b/index.html
@@ -30,43 +30,30 @@
 	<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="./css/main.css">
+	<script defer src="./js/main.js"></script>
 </head>
 
 <body>
 
 	<!-- HEADER -->
 	<header>
-		<div id="grid">
-			<div class="inner">
-				<a href="https://yenakhim.github.io/practice/" class="logo">
-					<img class="logo-img" src="./images/logo.png" alt="HALLEY LOGO">
-				</a>
-			</div>
-			<div class="submenu">
-				<a href="./newarrivals.html">New Arrivals</a>
-				<a href="./underwear.html">Underwear</a>
-				<a href="./swimwear.html">Swimwear</a>
-				<a href="./plus.html">Plus Size</a>
-				<a href="./sale.html">Sale</a>
+		<div class="inner">
+			<a href="https://yenakhim.github.io/practice/" class="logo">
+				<img class="logo-img" src="./images/logo.png" alt="HALLEY LOGO">
+			</a>
+			<div class="sub-menu">
+				<ul class="menu">
+					<li>
+						<a href="/signin">Sign In</a>
+					</li>
+				</ul>
+				<div class="search">
+					<input type="text" />
+					<div class="material-icons">search</div>
+				</div>
 			</div>
 		</div>
-
 	</header>
-	<div class="row">
-		<div class="col col-1">
-			<img class="gen-img" src="./images/50s-image.jpeg" alt="50s-image">
-			<a class="gen-link" href="#fifties">SHOP 50s</a>
-		</div>
-		<div class="col col-2">
-			<img class="gen-img" src="./images/60s-image.jpeg" alt="60s-image">
-			<a class="gen-link" href="#sixties">SHOP 60s</a>
-		</div>
-		<div class="col col-3">
-			<img class="gen-img" src="./images/70s-image.jpeg" alt="70s-image">
-			<a class="gen-link" href="#seventies">SHOP 70s</a>
-		</div>
-		
-	</div>
 </body>
 
 </html>
